package com.myspring.beans;

public class BYD implements Car {

    @Override
    public void run() {
        System.out.println("BYD IS RUNNING");
    }
}
