package com.myspring.beans;

public interface Car {

    public void run();


}
